implemented deletion of links

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,7 +9,7 @@
     </header>
 
     <p><a href="<%= urls[shortURL] %>"><%= urls[shortURL] %></a></p>
-    <p><a href="/<%= shortURL %>"><%= host + "/" + shortURL %></a></p>
+    <p><a href="/u/<%= shortURL %>"><%= host + "/u/" + shortURL %></a></p>
 
   </body>
 </html>
