--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <% //include ./partials/_head %>
-  </head>
-  <body class="container">
-      <header>
-          <% include ./partials/_header %>
-      </header>
-
-    <ul>
-      <% for (var key in urls) { %>
-      <li><a href="/urls/<%= key %>"><%= key %></a>: <a href="<%= urls[key] %>"><%= urls[key] %></a></li>
-
-      <% } %>
-    </ul>
-    <a href="#">shorten URL</a>
-
-    <footer>
-        <% //include ./partials/_footer %>
-    </footer>
-  </body>
+<head>
+  <% include ./partials/_head %>
+</head>
+<body>
+  <div class="container">
+    <%- include('partials/_navbar') %>
+    <div class="container">
+      <table>
+        <% for (let key in urls) { %>
+        <div>
+          <tr>
+            <td><a href="/urls/<%= key %>"><%= key %></a></td>
+            <td> → <a href="<%= urls[key] %>"><%= urls[key] %></a></td>
+            <td><form class="delete-button" method="POST" action="/urls/<%= key %>/delete">
+              <button type="submit" name="delete" value="delete" class="btn btn-default">delete <img src="/icon/trash.png" width="18px"> </button>
+            </form></td>
+          </tr>
+        </div>
+        <% } %>
+      </table>
+    </div>
+    <div class="container">
+      <a class="btn btn-default" href="/urls/new">shorten URL</a>
+    </div>
+    <% //include ./partials/_footer %>
+  </div>
+</body>
 </html>
