implemented editing links

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <% include ./partials/_head %>
+</head>
   </head>
   <body class="container">
-    <header>
-      <% include ./partials/_header %>
-    </header>
 
-    <p><a href="<%= urls[shortURL] %>"><%= urls[shortURL] %></a></p>
-    <p><a href="/u/<%= shortURL %>"><%= host + "/u/" + shortURL %></a></p>
+    <% include ./partials/_navbar %>
+
+    <div class="container">
+      <h2>ShortURL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></h2>
+
+      <form class="form-group input-group col-sm-6" method="POST" action="/urls/<%= shortURL %>">
+        <input class="form-control" name="longURL" value="<%= urls[shortURL] %>">
+        <div class="input-group-btn">
+          <button type="submit" name="update" value="update" class="btn btn-default">update</button>
+        </div>
+      </form>
+    </div>
 
   </body>
 </html>
