--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,16 +5,17 @@
 </head>
 <body>
   <div class="container">
-    <%- include('partials/_navbar') %>
+    <% include ./partials/_navbar %>
     <div class="container">
       <table>
         <% for (let key in urls) { %>
         <div>
           <tr>
-            <td><a href="/urls/<%= key %>"><%= key %></a></td>
+            <td><%= key %></td>
             <td> → <a href="<%= urls[key] %>"><%= urls[key] %></a></td>
+            <td><a href="/urls/<%= key %>">Edit</a></td>
             <td><form class="delete-button" method="POST" action="/urls/<%= key %>/delete">
-              <button type="submit" name="delete" value="delete" class="btn btn-default">delete <img src="/icon/trash.png" width="18px"> </button>
+              <button type="submit" name="delete" value="delete" class="btn btn-default">Delete <img src="/icon/trash.png" width="18px"> </button>
             </form></td>
           </tr>
         </div>
