--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,5 @@
 <!-- views/partials/footer.ejs -->
-<footer class="footer">
+
+<footer class="footer col-sm-12">
   <p>&copy; 90210 lawyer stuff.</p>
 </footer>
