--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -5,28 +5,23 @@
       <div class="navbar-header">
         <a href="#" class="navbar-brand text-muted">tinyApp</a>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <% if ( username ) { %>
-        <li>
-          <form method="POST" action="/logout" class="navbar-form navbar-right">
-            <div class="form-group">
-              <label for="submit"><%= username %></label>
-              <button id="submit" type="submit" class="btn btn-default">Logout</button>
-            </div>
-          </form>
-        </li>
-        <% } else { %>
-        <li>
-          <form method="POST" action="/login" class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" class="form-control" name="username" placeholder="username" value="<%= username %>">
-            </div>
-            <button type="submit" class="btn btn-default">Sign In</button>
-          </form>
-        </li>
-        <% } %>
-        <li role="presentation"><a href="/">Home</a></li>
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
       </ul>
+      <% if ( user ) { %>
+        <form method="POST" action="/logout" class="nav navbar-form navbar-right">
+          <div class="form-group">
+            <label for="submit"><%= user.email %></label>
+            <button id="submit" type="submit" class="btn btn-default">Logout</button>
+          </div>
+        </form>
+      <% } else { %>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/login">Sign In</a></li>
+        <li><a href="/register">Register</a></li>
+      </ul>
+      <% } %>
+
     </div>
   </nav>
 </div>
