--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:20px; padding:50px;">
-    <% include partials/_header %>
-    <form action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
-    </form>
-  </body>
+<head>
+  <% include partials/_head %>
+</head>
+<body class="container">
+  <% include partials/_navbar %>
+  <form action="/urls" method="POST" style="margin:100px;">
+    <label for="longURL">Enter a URL:</label>
+    <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+    <input type="submit" value="Submit">
+  </form>
+  <% include ./partials/_footer %>
+</body>
 </html>
