--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,8 +6,8 @@
 <body>
   <div class="container">
     <% include ./partials/_navbar %>
+    <% if ( user ) { %>
     <div class="container">
-      <% if ( user ) { %>
       <table>
         <% for (let key in urls) {
              if ( user && utils.ownsURL(user.id, key)) { %>
@@ -15,7 +15,10 @@
             <td><%= key %></td>
             <td> → <a href="/u/<%= key %>"><%= utils.getLongURL(key) %></a></td>
 
-            <td><a class="btn btn-default" href="/urls/<%= key %>">Edit</a></td>
+            <td><form class="delete-button" method="GET" action="/urls/<%= key %>">
+              <button type="submit" name="edit" value="edit" class="btn btn-default">Edit </button>
+            </form></td>
+
             <td><form class="delete-button" method="POST" action="/urls/<%= key %>/delete">
               <button type="submit" name="delete" value="delete" class="btn btn-default">Delete <img src="/icon/trash.png" width="18px"> </button>
             </form></td>
@@ -23,13 +26,13 @@
           <% }
            } %>
       </table>
+      </div>
+      <div class="container">
+        <a class="btn btn-default" href="/urls/new">Create new short URL</a>
+      </div>
       <% } else { %>
       <p>Please log in to see URLs</p>
       <% } %>
-    </div>
-    <div class="container">
-      <a class="btn btn-default" href="/urls/new">shorten URL</a>
-    </div>
     <% include ./partials/_footer %>
   </div>
 </body>
