additional cleanup, and setup for readme file.

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,5 @@
 <!-- views/partials/footer.ejs -->
 
 <footer class="footer col-sm-12">
-  <p>&copy; 90210 lawyer stuff.</p>
+  <p>&copy; 2017 Armel Chesnais</p>
 </footer>
