--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -6,7 +6,7 @@
 <body class="container">
   <% include partials/_navbar %>
   <form action="/urls" method="POST" style="margin:100px;">
-    <label for="longURL">Enter a URL:</label>
+    <label for="longURL">Enter a URL to shorten:</label>
     <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
     <input type="submit" value="Submit">
   </form>
